--- a/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
@@ -11,10 +11,10 @@
     {% endif %}
   </div>
   <div class="point clearfix">
-    <dt><strong class="corGlobRed font18 fon700">{{ app.session.get('points') }}</strong><br />当前米粒数</dt>
-    <dt class="right"><strong class="corGlobRed font18 fon700">{{ confirmPoints }}</strong><br />确认中米粒数</dt>
-    <dd><a href="{{ asset(path('_user_adtaste',{'type':0}),'cdn1') }}">我的任务历史</a></dd>
-    <dd class="right"><a href="{{ asset(path('_user_exchange',{'type':0,'exchangeType':1}),'cdn1') }}">我的兑换历史</a></dd>
+    <dt class="corDarkGray"><strong class="corGlobRed font18 fon700">{{ app.session.get('points') }}</strong><br />当前米粒数</dt>
+    <dt class="right corDarkGray"><strong class="corGlobRed font18 fon700">{{ confirmPoints }}</strong><br />确认中米粒数</dt>
+    <dd><a class="corDarkGray" href="{{ asset(path('_user_adtaste',{'type':0}),'cdn1') }}">我的任务历史</a></dd>
+    <dd class="right"><a class="corDarkGray" href="{{ asset(path('_user_exchange',{'type':0,'exchangeType':1}),'cdn1') }}">我的兑换历史</a></dd>
   </div>
 </div>
 
