--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -23,7 +23,7 @@ function clear(){
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle login">
-  <div class="img"><img src="{{ asset('images/loginImage.jpg') }}" width="436" height="423"></div>
+  <div class="img"><img src="{{ asset('images/loginImage.png') }}" width="436" height="423"></div>
   <form action="{{ path('_user_login') }}" method="post" name="form1" id="form1">
   <article>
     <ul class="loginForm">
