--- a/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
@@ -14,9 +14,10 @@
 <script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/categorys.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
+<script src="{{ asset('js140307/nopic.js') }}" language="javascript"></script>
 <script type="text/javascript">
 	  $(function (){
-		for(i=3; i<24; i+=4){
+		for(i=3; i<100; i+=4){
 		  $("ul.commodityUl li").eq(i).css("margin-right", "0");
 		}
 	  });
