--- a/web/css/indexNew.css
+++ b/web/css/indexNew.css
@@ -348,7 +348,7 @@
 	height: 78px;
 }
 
-.index aside #banner {
+/*.index aside #banner {
 	overflow: hidden;
 	position: relative;
 	width: 100%;
@@ -720,7 +720,7 @@
 .index aside #userInformation a.forget {
 	color: #54b9e8;
 }
-
+*/
 /*.index aside .frame #ranking {
 	position: relative;
 }
