--- a/web/css/default.css
+++ b/web/css/default.css
@@ -7,6 +7,7 @@ body {
 	background-color:#f5f5f5;
 	line-height:150%;
 	position:relative;
+	 background:url("../images140307/bgxy.png") repeat;
 }
 body, input, button, select, textarea, table {
     font: 12px/1.5 tahoma,arial,'Hiragino Sans GB',\5b8b\4f53,sans-serif;
