#362 added to admin menu

--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -644,6 +644,25 @@
             </TR>
         </TABLE>
         
+        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+            <TR height=22>
+                <TD style="PADDING-LEFT: 30px" background={{asset('images/admin/menu_bt.jpg')}}>
+                    <A class=menuParent onclick=expand(21) href="javascript:void(0);">Emar API Cache</A>
+                </TD>
+            </TR>
+            <TR height=4>
+                <TD></TD>
+            </TR>
+        </TABLE>
+        <TABLE id=child21 style="DISPLAY: none" cellSpacing=0 cellPadding=0 width=150 border=0>
+            <TR height=20>
+                <TD align=middle width=30><IMG height=9 src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+                <TD><A class=menuChild href="{{ path('jili_emar_admincachepanel_index') }}" target=main>Manager Panel</A></TD>
+            </TR>
+            <TR height=4>
+                <TD colSpan=2></TD>
+            </TR>
+        </TABLE>
         </TD>
     </TR>
 </TABLE>
