--- a/src/Jili/EmarBundle/Resources/views/AdminCachePanel/index.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminCachePanel/index.html.twig
@@ -3,29 +3,27 @@
 {% block javascripts %}
 <script src="{{ asset('js140307/jquery-1.8.2.js') }}" language="javascript"></script>
 <script type="text/javascript">
+$(function() {
+	$(".chk-toggle").click(function() {
+		$(":input").filter(".files").each(function() {
+			$(this).prop("checked", ! $(this).prop("checked"));
+		})
+	});
+	$(".chk-all").click(function() {
 
-$(function(){
-$(".files").click(function(){
+		$(":input").filter(".files").each(function() {
+			$(this).prop("checked", true);
+		})
+	});
 
-console.log( $(this).val() );
-console.log( $(this).prop("checked") );
-console.log('ok');
-}); 
-
-$('form#remove').submit(function() {
-
-var files = [];
-$("input.files:checked").each(function() {
-files.push( $(this).val());
+	$('form#remove').submit(function() {
+		var files = [];
+		$("input.files:checked").each(function() {
+			files.push($(this).val());
+		});
+		$(':input#form_filenames').val(JSON.stringify(files));
+	});
 });
-$(':input#form_filenames').val( JSON.stringify(files));
-console.log(files);
-
-}) ;
-
-});
-
-
 </script>
 {% endblock %}
 
