--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
@@ -45,7 +45,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                           {% for user in users.1 %}
-                            <tr {%if user.4 == 51 or user.4 == 100 %} class="red" {% endif %}>
+                            <tr {%if user.4 == 100 %} class="red" {% endif %}>
                                 <td width="30%">第{{ user.4}}名</td>
                                 <td width="35%">{{ user.2[:3] }}**</td>
                                 <td width="35%">获得{{ user.3 }}米粒</td>
