--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
@@ -5,6 +5,7 @@
 <title>积粒网-7月份活动</title>
 {% include 'JiliApiBundle::seo.html.twig' %}
 <link href="{{ asset('css/jl.ui.July.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                             {% for user in users.0 %}
-                            <tr {%if user.4 == 1 or user.4 == 3  or user.4 == 10 or user.4 == 50 %} class="red" {% endif %}>
+                            <tr {%if user.4 in [1, 3, 10, 50] %} class="red" {% endif %}> {# 1,3,10,50 is ranking number#}
                                 <td width="30%">第{{ user.4}}名</td>
                                 <td width="35%">{{ user.2[:3] }}**</td>
                                 <td width="35%">获得{{ user.3 }}米粒</td>
@@ -45,7 +46,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                           {% for user in users.1 %}
-                            <tr {%if user.4 == 100 %} class="red" {% endif %}>
+                            <tr {%if user.4 == 100 %} class="red" {% endif %}> {# 100 is ranking number#}
                                 <td width="30%">第{{ user.4}}名</td>
                                 <td width="35%">{{ user.2[:3] }}**</td>
                                 <td width="35%">获得{{ user.3 }}米粒</td>
@@ -72,7 +73,7 @@
                     </div>
                     {% if app.session.get('uid') %}
                     <div class="immediateMsg">
-                        <p>您在{{ ''|date('H') }}时{{ ''|date('i') }}分的米粒数</p>
+                        <p>您在{{ 'now'|date('H') }}时{{ 'now'|date('i') }}分的米粒数</p>
                         <div class="mlNum">{{my_point}}</div>
                     </div>
                     {% endif %}
@@ -82,25 +83,31 @@
         </div>
 </div>
 <script type="text/javascript">
-    function rankTop(){
-        var rank = document.getElementById('rank');
-        var top = document.body.scrollTop || document.documentElement.scrollTop;
-        var rankTop = rank.offsetTop;
-        var explorer = window.navigator.userAgent;
-        if(document.body.scrollTop){
-            document.body.scrollTop = rankTop;
-        }else{
-            document.documentElement.scrollTop = rankTop;
+(function() {
+    jQuery(function($) {
+        window.rankTop=function()
+        {
+            var rank = document.getElementById('rank');
+            var top = document.body.scrollTop || document.documentElement.scrollTop;
+            var rankTop = rank.offsetTop;
+            var explorer = window.navigator.userAgent;
+            if(document.body.scrollTop){
+                document.body.scrollTop = rankTop;
+            }else{
+                document.documentElement.scrollTop = rankTop;
+            }
+            if(explorer.indexOf('Chrome')>=0){
+                document.body.scrollTop = rankTop;
+            }
+            if(explorer.indexOf('MSIE 7.0')>=0){
+                rank.style.position = 'relative';
+                rankTop = rank.offsetTop;
+                document.documentElement.scrollTop = rankTop;
+            }
         }
-        if(explorer.indexOf('Chrome')>=0){
-            document.body.scrollTop = rankTop;
-        }
-        if(explorer.indexOf('MSIE 7.0')>=0){
-            rank.style.position = 'relative';
-            rankTop = rank.offsetTop;
-            document.documentElement.scrollTop = rankTop;
-        }
-    }
+    });
+})();
+
 </script>
 </body>
 </html>
