--- a/src/Jili/ApiBundle/Resources/views/User/signup_activate.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/signup_activate.html.twig
@@ -45,39 +45,45 @@ $(document).ready(function(){
     <div class="regForm">
     <div class="message"><img src="{{ asset('images/succeed.jpg')}}" width="39" height="44">邮箱验证成功！你的邮箱是：<span>{{ user.email }}</span></div>
     <div class="remind">HI,{{ user.nick }},欢迎来到积粒网。请完善一下信息创建您的积粒账号</div>
-    <form action="{{ path('_user_signup_activate', {'token': token, 'uid': uid }) }}" method="post" name="form1" id="form1" >
+
+    {% form_theme form with 'JiliApiBundle:Form:form_errors.html.twig' %}
+    <form action="{{ path('_user_signup_activate', {'token': token, 'uid': uid }) }}" method="post" name="form1" id="form1" {{ form_enctype(form) }} >
+        
     <ul class="form activate">
         <li>
         <dd>{{ form_label(form.password1) }}</dd>
         <dt>
-        {{ form_widget(form.password1 , {'attr': {'id': 'pwd', 'class': 'password' }  }  )  }}
+        {{ form_widget(form.password1 , {'attr': { 'class': 'password' }  }  )  }}
         <br />
     	<span id="pwdError">
-         {{ form_errors(form.password1) }}
-    	 {% if code_pwd is defined  %}
-        	 <font color="red">{{ code_pwd }}</font>
-         {% else %}
+           {% if form.password1.vars.errors|length %}
+        	 {{ form_errors(form.password1) }}
+           {% elseif errors is defined and errors.password1 is defined %}
+        	 <font color="red">{{ errors.password1 }}</font>
+           {% else %}
              电子邮件就是您今后登录积粒网的账号
-    	 {% endif %}
+           {% endif %}
     	</span></dt></li>
 
 
         <li>
         <dd>{{ form_label(form.password2) }}</dd>
         <dt>
-        {{ form_widget(form.password2 , {'attr': {'id': 'que_pwd', 'class': 'password' }  }  )  }}
+        {{ form_widget(form.password2 , {'attr': {'class': 'password' }  }  )  }}
         <br />
         <span id="newError">
-        {{ form_errors(form.password2) }}
-        {% if code_que_pwd is defined  %}
-            <font color="red">{{ code_que_pwd }}</font>
+
+           {% if form.password2.vars.errors|length %}
+        	 {{ form_errors(form.password2) }}
+         {% elseif errors is defined and errors.password2 is defined %}
+            <font color="red">{{ errors.password2 }}</font>
     	 {% else %}
             6-20个字符
     	 {%  endif %}
         </span></dt></li>
 
         <li><dd></dd><dt>
-        {{  form_widget( form.agreement, {'attr': {'id': 'ck', 'value': 1 } } ) }} {{ form_label( form.agreement , '我已认真阅读并同意接受.', {'label_attr': { 'class':'' } } ) }}<a href="{{ path('_user_agreement') }}" target="_blank" class="provision">《积粒网会员协议》</a></dt></li>
+        {{  form_widget( form.agreement ) }} {{ form_label( form.agreement , '我已认真阅读并同意接受.', {'label_attr': { 'class':'' } } ) }}<a href="{{ path('_user_agreement') }}" target="_blank" class="provision">《积粒网会员协议》</a></dt></li>
 
         {{ form_rest(form) }}
         <li><dd></dd><dt><input type='button' name='but' id='but' value='创建账号' class='regBtn'/></dt></li>
