--- a/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
@@ -20,7 +20,11 @@
     <div class="regFrame">
     	<div class="finish">
    	    <div class="img"><img src="{{ asset('images/regFinish.jpg')}}" width="108" height="82"></div>
-        <h2><恭喜，您已注册成功！</h2>
+{% for flashMessage in app.session.flashbag.get('notice') %}
+    <h2>{{ flashMessage }}</h2>
+{% else %}
+        <h2>恭喜，您已注册成功！</h2>
+{% endfor %}
         <p>进入 <a href="{{ path('_homepage') }}">首页</a> / <a href="{{ path('_user_info') }}">个人中心</a> / <a href="{{ path('_default_support')}}">帮助中心</a> / <a href="{{ path('_advertiserment_list')}}">直接去参加广告体验</a></p>
         </div>
     </div>
