--- a/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
@@ -1,18 +1,29 @@
 <h3 class="font18 corGlobRed"><strong>商家活动</strong></h3>
+{#
 <ul class="clearfix">
   <div class="mask">
-    <div class="moveDiv">
-    {% for item in market %}
+    <div class="moveDiv"> {% for item in market %}
       <li>
         <dt><a target="_blank" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2"><img src="{{ asset(item.activityImage) }}" alt="{{ item.businessName }}"/></a></dt>
         <dd>
-		  <p class="discount">{{ item.title }}</p>
+          <p class="discount">{{ item.title }}</p>
           <p class="title">{{ item.businessName}}</p>
           <p class="btn"><a class="goActivity" target="_blank" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2">去看看</a></p>
         </dd>
       </li>
-      {% endfor %}
-    </div>
+      {% endfor %} </div>
   </div>
   <a class="prevBtn">prev</a><a class="nextBtn">next</a>
 </ul>
+#}
+<div class="con borderGlob">
+ {% for item in market %}
+  <div class="box">
+    <div class="img"> <a target="_blank" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2"><img src="{{ asset(item.activityImage) }}" alt="{{ item.businessName }}"/></a> </div>
+    <div class="info">
+      <h4 class="font18 fontYH lh32"><a target="_blank" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2"><span class="corGlobRed">{{ item.title }}</span>{{ item.businessName}}</a></h4>
+      <div class="btns"> <a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank" class="btn btn-warning">去看看<span></span></a> </div>
+    </div>
+  </div>
+ {% endfor %}
+</div>
