增加商家活动文字说明 activity_description -- issue403

--- a/src/Jili/ApiBundle/Resources/views/Admin/addBusinessActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/addBusinessActivity.html.twig
@@ -52,6 +52,7 @@ KE.show({
     {% endif %}
 </td></tr>
 <tr><td>活动标题:</td><td><input type="text" name="businessname" size='50' value="{{ businessName }}"/></td></tr>
+<tr><td>活动说明:</td><td><textarea name="actDescription">{{ actDescription }}</textarea></td></tr>
 <tr><td>活动商家名:</td><td>
 <select name="actId" id="actId">
   {% for item in adver %}
