--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -12,6 +12,9 @@
 <link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js140307/url.min.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js140307/md5.min.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js140307/jquery.cookie.js')}}" type="text/javascript"></script>
 </head>
 <body>
 {% include 'JiliApiBundle::userHead.html.twig' %}
@@ -72,7 +75,29 @@ $(document).ready(function(){
 	$("#reg").click(function(){
 		$("#form1").submit();
 	});
+    source_route_manager();
 });
+// init the cookie for user source tracer.
+var source_route_manager  = function() {
+  var spm = url('?spm');
+var path= url('path');
+    if (typeof spm !== 'undefined') {
+        var timestr = Date.now();
+        $.cookie('source_route6', spm, {
+            path: path
+        });
+
+        $.cookie('pv6', md5('pv' + spm + timestr), {
+            path: path
+        });
+
+        if (typeof $.cookie('pv_unique6') === 'undefined') {
+            $.cookie('pv_unique6', md5('pv_unique' + spm + timestr), {
+                path:path
+            });
+        }
+    }
+};
 
 </script>
 </html>
