网站改版：首页 #399

--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -550,7 +550,7 @@
         <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
             <TR height=22>
                 <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}">
-                    <A class=menuParent onclick=expand(17) href="javascript:void(0);">紧急广告管理</A>
+                    <A class=menuParent onclick=expand(17) href="javascript:void(0);">紧急公告管理</A>
                 </TD>
             </TR>
             <TR height=4>
