--- a/src/Jili/ApiBundle/Resources/views/Top/event.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/event.html.twig
@@ -1,7 +1,9 @@
-<ul class="clearfix">
-  {% for item in recentPoint %}
-  <li>
-    <p><span>{{ item.0 }}</span>{{ item.3 }}{% if item.2 > 0 %}获得{% else %}兑换{% endif %}<em>{{ item.2|abs }}</em>积分</p>
-  </li>
-  {% endfor %}
-</ul>
+<div class="mask">
+  <ul>
+    {% for item in recentPoint %}
+    <li>
+        <p><span>{{ item.0 }}</span>{{ item.3 }}{% if item.2 > 0 %}获得{% else %}兑换{% endif %}<em>{{ item.2|abs }}</em>积分</p>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
